--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-session": "^1.17.3"
   },
   "devDependencies": {},
   "keywords": [],
