--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "express-session": "^1.17.3"
+    "express": "^4.18.2"
   },
   "devDependencies": {},
   "keywords": [],
